vlib/v/parser/tests/redeclaration_of_imported_fn.vv
import os { input }

fn input() {}

input()
